# game-engine-template

./: .gitignore  CMakeLists.txt  Makefile
engine/: CMakeLists.txt
engine/include/: Application.hpp  Renderer.hpp  Scene.hpp  app.h  app.hpp  hello.h
engine/include/entity/: GameScript.hpp  ScriptComponent.hpp
engine/include/events/: Layer.hpp
engine/include/helpers/: FirstPersonWalkingCamera.hpp
engine/include/platform/: GlfwPlatform.hpp  Platform.hpp
engine/include/utils/: debug.hpp
engine/src/: Application.cpp  Renderer.cpp  Scene.cpp  app.cpp  hello.cpp
engine/src/platform/: GlfwPlatform.cpp
engine/src/utils/: debug.cpp
sandbox/: CMakeLists.txt
sandbox/src/: main.cpp
